--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    
     - name: Checkout this repo
       uses: actions/checkout@v3
+
     - name: Cache dependencies
       uses: actions/cache@v3
       with:
@@ -21,19 +23,23 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
+
     - name: Set up JDK 1.8
       uses: actions/setup-java@v3
       with:
         distribution: 'zulu'
         java-version: 8
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml -DskipMunitTests
+
     - name: Stamp artifact file name with commit hash
       run: |
         artifactName1=$(ls target/*.jar | head -1)
         commitHash=$(git rev-parse --short "$GITHUB_SHA")
         artifactName2=$(ls target/*.jar | head -1 | sed "s/.jar/-$commitHash.jar/g")
         mv $artifactName1 $artifactName2
+
     - name: Upload artifact 
       uses: actions/upload-artifact@v3
       with:
@@ -43,9 +49,11 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    steps:    
+    steps: 
+
     - name: Checkout this repo
       uses: actions/checkout@v3
+
     - name: Cache dependencies
       uses: actions/cache@v3
       with:
@@ -53,19 +61,28 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - uses: actions/download-artifact@v3
+
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'zulu'
+        java-version: 8
+
+    - name: Download artifact 
+      uses: actions/download-artifact@v3
       with:
         name: artifacts
+
     - name: Add repo credentials
       uses: s4u/maven-settings-action@v2.6.0
       with:
-        java-version: 8
         servers: |
           [{
            "id": "MuleRepository",
            "username": "${{ secrets.anypoint_platform_username }}",
            "password": "${{ secrets.anypoint_platform_password }}"
           }]
+          
     - name: Deploy to Sandbox
       env:
         USERNAME: ${{ secrets.anypoint_platform_username }}
