v2 - scoring system - first push

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,9 @@
 						<workerType>${workerType}</workerType>
 						<applyLatestRuntimePatch>true</applyLatestRuntimePatch>
 						<objectStoreV2>true</objectStoreV2>
+						<properties>
+							<env>${env}</env>
+						</properties>
 					</cloudHubDeployment>
 					<classifier>mule-application</classifier>
 				</configuration>
