--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
         "**/.mvn": true,
         "**/.exchange_modules_tmp": true,
         ".mule": true
-    }
+    },
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
