--- a/.github/workflows/merge-to-dev.yml
+++ b/.github/workflows/merge-to-dev.yml
@@ -5,11 +5,18 @@ on:
 
 jobs:
   createPR:
-    name: Create PR from ${{ github.ref_name }} to dev
+    env:
+      originBranch: ${{ github.ref_name }}
+      toBranch: dev
+    name: Create PR from $originBranch to $toBranch
     runs-on: ubuntu-latest
     steps:
-      - name: Create a new Pull Request to dev
-        uses: peter-evans/create-pull-request@v5
+      - uses: actions/checkout@v3
         with:
-          branch: ${{ github.ref_name }}
-          base: dev
+          ref: $toBranch
+      - name: Reset branch
+        run: |
+            git fetch origin $originBranch:$originBranch
+            git reset --hard $originBranch
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v5
