--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.prostdev</groupId>
     <artifactId>mule-battlesnake</artifactId>
-    <version>3.0.3</version>
+    <version>3.0.4</version>
     <packaging>mule-application</packaging>
     <name>mule-battlesnake</name>
     <properties>
@@ -19,7 +19,7 @@
         <environment>Sandbox</environment>
         <munit.version>2.3.15</munit.version>
         <!-- DataWeave -->
-        <dataweave.version>2.4.0-20221212</dataweave.version>
+        <dataweave.version>2.6.0</dataweave.version>
     </properties>
     <build>
         <plugins>
