--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <mule.runtime.version>4.6-lts-java8</mule.runtime.version>
+        <mule.runtime.version>4.6.0</mule.runtime.version>
         <mule.maven.plugin.version>4.1.1</mule.maven.plugin.version>
         <!-- Define CH app prefix to be unique before deploying to CH -->
         <cloudhub.app.prefix>amartinez</cloudhub.app.prefix>
