--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <mule.runtime.version>4.6.0</mule.runtime.version>
+        <mule.runtime.version>4.6</mule.runtime.version>
+        <release.channel>LTS</release.channel>
+        <java.version>8</java.version>
         <mule.maven.plugin.version>4.1.1</mule.maven.plugin.version>
         <!-- Define CH app prefix to be unique before deploying to CH -->
         <cloudhub.app.prefix>amartinez</cloudhub.app.prefix>
@@ -39,6 +41,8 @@
                     <cloudHubDeployment>
                         <uri>https://anypoint.mulesoft.com</uri>
                         <muleVersion>${mule.runtime.version}</muleVersion>
+                        <releaseChannel>${release.channel}</releaseChannel>
+                        <javaVersion>${java.version}</javaVersion>
                         <connectedAppClientId>${client.id}</connectedAppClientId>
                         <connectedAppClientSecret>${client.secret}</connectedAppClientSecret>
                         <connectedAppGrantType>client_credentials</connectedAppGrantType>
