--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.prostdev</groupId>
     <artifactId>mule-battlesnake</artifactId>
-    <version>3.2.1</version>
+    <version>3.2.2</version>
     <packaging>mule-application</packaging>
     <name>mule-battlesnake</name>
     <properties>
@@ -121,12 +119,6 @@
             <artifactId>assertions</artifactId>
             <version>1.0.2</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.mulesoft.services</groupId>
-            <artifactId>mule-service-weave-ee</artifactId>
-            <version>${dataweave.version}</version>
-            <scope>runtime</scope>
         </dependency>
         <!-- not sure if this is expected -->
         <dependency>
