--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,45 +29,7 @@ jobs:
           nexus_password: ${{ secrets.anypoint_platform_password }}
         run: mvn test --settings .maven/settings.xml -Dmunit.failIfNoTests=true
 
-  build:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout this repo
-        uses: actions/checkout@v4
-
-      - name: Cache dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v4
-        with:
-          distribution: "zulu"
-          java-version: 8
-
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml -DskipMunitTests
-
-      - name: Stamp artifact file name with commit hash
-        run: |
-          artifactName1=$(ls target/*.jar | head -1)
-          commitHash=$(git rev-parse --short "$GITHUB_SHA")
-          artifactName2=$(ls target/*.jar | head -1 | sed "s/.jar/-$commitHash.jar/g")
-          mv $artifactName1 $artifactName2
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: artifacts
-          path: target/*.jar
-
   deploy:
-    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout this repo
@@ -86,22 +48,15 @@ jobs:
         with:
           distribution: "zulu"
           java-version: 8
-
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: artifacts
 
       - name: Publish to Exchange
         run: |
-          mvn deploy --settings .maven/settings.xml \
+          mvn deploy --settings .maven/settings.xml -DskipMunitTests \
           -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
           -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}"
 
       - name: Deploy to CloudHub 2.0
         run: |
-          artifactName=$(ls *.jar | head -1)
           mvn deploy --settings .maven/settings.xml -DskipMunitTests -DmuleDeploy \
-          -Dmule.artifact=$artifactName \
           -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
           -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}" 
