--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout this repo
         uses: actions/checkout@v4
@@ -50,12 +51,18 @@ jobs:
           java-version: 8
 
       - name: Publish to Exchange
+        env:
+          nexus_username: ${{ secrets.anypoint_platform_username }}
+          nexus_password: ${{ secrets.anypoint_platform_password }}
         run: |
           mvn deploy --settings .maven/settings.xml -DskipMunitTests \
           -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
           -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}"
 
       - name: Deploy to CloudHub 2.0
+        env:
+          nexus_username: ${{ secrets.anypoint_platform_username }}
+          nexus_password: ${{ secrets.anypoint_platform_password }}
         run: |
           mvn deploy --settings .maven/settings.xml -DskipMunitTests -DmuleDeploy \
           -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
