--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy to Sandbox
+name: Publish to Exchange and Deploy to CloudHub 2.0
 
 on:
   push:
@@ -6,64 +6,33 @@ on:
       - main
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout this repo
-        uses: actions/checkout@v4
-      - name: Cache dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v4
-        with:
-          distribution: "zulu"
-          java-version: 8
-      - name: Test with Maven
-        env:
-          nexus_username: ${{ secrets.anypoint_platform_username }}
-          nexus_password: ${{ secrets.anypoint_platform_password }}
-        run: mvn test --settings .maven/settings.xml -Dmunit.failIfNoTests=true
+    deploy:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout this repo
+              uses: actions/checkout@v4
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Checkout this repo
-        uses: actions/checkout@v4
+            - name: Cache dependencies
+              uses: actions/cache@v4
+              with:
+                path: ~/.m2/repository
+                key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+                restore-keys: ${{ runner.os }}-maven-
 
-      - name: Cache dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+            - name: Set up JDK 1.8
+              uses: actions/setup-java@v4
+              with:
+                distribution: "zulu"
+                java-version: 8
 
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v4
-        with:
-          distribution: "zulu"
-          java-version: 8
+            - name: Publish to Exchange
+              run: |
+                mvn deploy --settings .maven/settings.xml -DskipMunitTests \
+                -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
+                -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}"
 
-      - name: Publish to Exchange
-        env:
-          nexus_username: ${{ secrets.anypoint_platform_username }}
-          nexus_password: ${{ secrets.anypoint_platform_password }}
-        run: |
-          mvn deploy --settings .maven/settings.xml -DskipMunitTests \
-          -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
-          -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}"
-
-      - name: Deploy to CloudHub 2.0
-        env:
-          nexus_username: ${{ secrets.anypoint_platform_username }}
-          nexus_password: ${{ secrets.anypoint_platform_password }}
-        run: |
-          mvn deploy --settings .maven/settings.xml -DskipMunitTests -DmuleDeploy \
-          -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
-          -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}" 
+            - name: Deploy to CloudHub 2.0
+              run: |
+                mvn deploy --settings .maven/settings.xml -DskipMunitTests -DmuleDeploy \
+                -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
+                -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}"
