--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>b903eebf-16e9-46c5-8992-bffd66c2306c</groupId>
     <artifactId>mule-battlesnake</artifactId>
-    <version>3.2.14</version>
+    <version>3.2.15</version>
     <packaging>mule-application</packaging>
     <name>mule-battlesnake</name>
     <properties>
@@ -35,9 +35,7 @@
                         <provider>MC</provider>
                         <environment>Sandbox</environment>
                         <target>Cloudhub-US-East-1</target>
-                        <connectedAppClientId>${client.id}</connectedAppClientId>
-                        <connectedAppClientSecret>${client.secret}</connectedAppClientSecret>
-                        <connectedAppGrantType>client_credentials</connectedAppGrantType>
+                        <server>Repository</server>
                         <applicationName>${project.artifactId}</applicationName>
                         <replicas>2</replicas>
                         <vCores>0.1</vCores>
