--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Test with MUnit, Publish to Exchange, and Deploy to CloudHub 2.0
+name: Test with MUnit, package and Deploy to CloudHub 1.0
 
 on:
   push:
@@ -6,39 +6,76 @@ on:
       - main
 
 jobs:         
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout this repo
         uses: actions/checkout@v4
-
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
-
       - name: Set up JDK 1.8
         uses: actions/setup-java@v4
         with:
           distribution: "zulu"
           java-version: 8
-
       - name: Test with Maven
         env:
           nexus_username: ${{ secrets.anypoint_platform_username }}
           nexus_password: ${{ secrets.anypoint_platform_password }}
         run: mvn test --settings .maven/settings.xml -Dmunit.failIfNoTests=true
-      
-      - name: Publish to Exchange
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout this repo
+        uses: actions/checkout@v4
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v4
+        with:
+          distribution: "zulu"
+          java-version: 8
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml -DskipMunitTests
+      - name: Stamp artifact file name with commit hash
         run: |
-          mvn deploy --settings .maven/settings.xml -DskipMunitTests \
-          -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
-          -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}"
-
-      - name: Deploy to CloudHub 2.0
+          artifactName1=$(ls target/*.jar | head -1)
+          commitHash=$(git rev-parse --short "$GITHUB_SHA")
+          artifactName2=$(ls target/*.jar | head -1 | sed "s/.jar/-$commitHash.jar/g")
+          mv $artifactName1 $artifactName2
+      - name: Upload artifact 
+        uses: actions/upload-artifact@v4
+        with:
+            name: artifacts
+            path: target/*.jar
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout this repo
+        uses: actions/checkout@v4
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-
+      - uses: actions/download-artifact@v4
+        with:
+          name: artifacts
+      - name: Deploy to Sandbox
         run: |
-          mvn deploy --settings .maven/settings.xml -DskipMunitTests -DmuleDeploy \
-          -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
-          -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}"
+          artifactName=$(ls *.jar | head -1)
+          mvn deploy -DskipMunitTests -DmuleDeploy \
+            -Dmule.artifact=$artifactName \
+            -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
+            -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}" 
